--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-  color: var(--primary-purple)!important;
+  color: var(--primary-txt-grey)!important;
 }
 
 button {
