--- a/src/styles/CreateIngredient.css
+++ b/src/styles/CreateIngredient.css
@@ -75,7 +75,7 @@
     border-color: var(--border-color);
     border-style: solid;
     border-width: 1px;
-    color: var(--primary-txt-grey);
+    color: var(--secondary-txt-grey);
 }
 
 
