--- a/src/styles/Ingredient.css
+++ b/src/styles/Ingredient.css
@@ -34,6 +34,7 @@
     top: 0px;
     right: 0px;
     margin: 5px;
+    justify-content: center;
 }
 
 .ingredient-container .action-buttons button {
@@ -44,9 +45,48 @@
     background-color: transparent !important;
 }
 
+.ingredient-container .action-buttons button:hover {
+    border-color: var(--border-grey);
+    border-width: 1px;
+    border-style: solid;
+    background-color: #f2f2f2;
+    box-shadow: 1px 1px 5px #00000025;
+}
+
+.ingredient-edit-buttons {
+    text-align: center;
+}
+
+.ingredient-edit-buttons button {
+    margin: 5px;
+    width: 150px;
+    color: var(--secondary-txt-grey);
+}
+
+.ingredient-edit-buttons button:hover {
+    margin: 5px;
+    width: 150px;
+    box-shadow: 1px 1px 5px #00000025;
+    border-color: var(--border-grey);
+}
+
+.ingredient-container input {
+    background-color: #fafafa;
+    color: var(--secondary-txt-grey);
+    border-radius: 3px;
+    border-color: var(--border-grey);
+    border-width: 1px;
+    border-style: solid;
+    font-weight: 500;
+}
+
+.ingredient-container label {
+    color: var(--secondary-txt-grey);
+}
 
 .action-buttons .bi {
     color: lightgray;
+    color: var(--secondary-txt-grey);
     font-size: 1em;
     margin: 5px;
     
@@ -54,6 +94,10 @@
 
 .ingredient-container .action-buttons .bi:hover {
     background-color: #f9f9f9;
+}
+
+.time-input-form {
+    text-align: center;
 }
 
 @media (min-width: 601px) {
@@ -66,4 +110,10 @@
     .ingredient-container {
         width: 100%;
     }
+}
+
+
+
+@media (prefers-color-scheme: dark) {
+    
 }
