--- a/src/styles/Welcome.css
+++ b/src/styles/Welcome.css
@@ -26,6 +26,12 @@
     color: white;
 }
 
+.welcome-container .get-cooking:hover {
+    box-shadow: 1px 1px 5px #00000025;
+    border-color: #00000000;
+    border-style: initial;
+}
+
 @media (min-width: 601px) {
   .welcome-container {
     width: 80%;
